  no visible reaction, although the software tried to connect to the
  database).
- Changes in adding new task panel:
  - Changed available filters to Luminance, Sloan g', Sloan r',
    Sloan i', H alpha
  - Removed guiding field
  - Removed extra commands field
  - Removed auto center field
  - Do not observe after is now set to (today) + 30 days (was 14)
- Password are now MD5 hashed

0.4.0 (2016-02-06)
- Objects panel updated, added several columns:
  - type (object type, as defined in NGC calatog)
  - epoch (J2000.0 in most cases)
  - magnitude (value taken from official catalogs)
  - width, height (expressed in minutes, as defined in catalogs)
- Object in the Object list can be double clicked. It will use its
  name, ra, dec in New task
- Targets can be now be selected from objects list
- Minor tweaks in New task panel

0.3.1 (3016-02-03)
- Corrected display of small negative declination (between 0 and -1
  degree)
- The default filter is now CV

0.3.0 (2016-02-03)
- Updated file column. It's now visible and for non-empty values it
  is clickable.
- Tasks are now edited with double click, rather than selection.
- User preferences panel added. It's in read-only mode for now, but
  it will be extended in the not so distant future.

0.2.7 (2016-01-31)
- Description column is now displayed
- Added minimum target altitude verification

0.2.6 (2016-01-30)
- Added Reset button to add task form
- skip_before and skip_after now have default values (now, now + 14 days)
- added Refresh button in the tasks view
- Exposure is now selected from a list of values. It's still possible
  to specify custom exposure values, though.
- Right ascension is now expressed in hours (0 ... 23.9999999)
- Right ascension values are now verified
- Declination values (-17 ... 90) are now verified
- Target, description and comments are now larger. Their values are
  verified to be no larger than 68 bytes.
- Auto center column added.
- Awkward word wrap in the login window fixed.
